force-app/main/default/objects/Speaker__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description
  >The company or organization the speaker is affiliated with.</description>
    <inlineHelpText
  >Enter the speaker's company or organization.</inlineHelpText>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>