force-app/main/default/objects/Speaker__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description
  >The speaker's email address, used for event communications.</description>
    <inlineHelpText>Enter the speaker's email address.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>